--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">WatUp</string>
     <string name="title_activity_home">WatUp</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_home">Water Level</string>
+    <string name="title_dashboard">Graph</string>
+    <string name="title_notifications">Water Control</string>
     <string name="title_settings">Settings</string>
 
     <!-- TODO: Remove or change this placeholder text -->
